--- a/eventApp/package.json
+++ b/eventApp/package.json
@@ -20,5 +20,8 @@
         "postcss": "^8.2.6",
         "postcss-import": "^12.0.1",
         "tailwindcss": "^2.0.3"
+    },
+    "dependencies": {
+        "jquery": "^3.5.1"
     }
 }
